fix: level info too small

--- a/resources/public/css/lapyrinthe.css
+++ b/resources/public/css/lapyrinthe.css
@@ -217,8 +217,8 @@ h2.subtitle span, #intro-screen .is-title {
     margin-top: 5%;
 }
 .game-nextlevel .panel-bordered {
-    width: 40%;
-    margin-left: 30%;
+    width: 50%;
+    margin-left: 25%;
     margin-top:1em;
     font-size: 1.1em;
 }
